# vtb-multibank-api-hackaton-2025

./: .actrc  .distignore  .editorconfig  .envrc  .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  Justfile  README.md  build.ts  eslint.config.js  package.json  pyproject.toml  tsconfig.json
.claude/: settings.json
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/workflows/: build-push-release.yaml  build-push.yaml  claude.yaml
.instruct/: commit_prompt.txt  context_prompt.txt  conventional_commit.txt
.mcps/: pplx-research.py
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json
.obsidian/plugins/notebook-navigator/: data.json
.obsidian/plugins/share-note/: data.json
backend/: Containerfile  __main__.py
docs/: Анализ.md
frontend/: App.tsx  Containerfile  build.ts
src/backend/: .env.example  Containerfile  __main__.py  app.py
src/backend/api/v1/: __init__.py  router.py
src/backend/api/v1/endpoints/: example.py
src/backend/core/: config.py  logging.py
src/frontend/: APITester.tsx  App.tsx  Containerfile  build.ts
tools/: apply-md  autocommit  autodocs  context  git-context
